crates/ditto-checker/tests/golden/type-errors/match_unification_error_1.ditto
module Test exports (..);

type Maybe(a) = Just(a) | Nothing;
type Foo = Foo;
type Bar = Bar;

nah = fn (maybe_foo : Maybe(Foo)) ->
  match maybe_foo with
  | Just(Bar) -> unit
  | Nothing -> unit
  end;
